--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,5 +25,8 @@ jobs:
           path: .cache
           restore-keys: |
             mkdocs-material-
-      - run: pip install mkdocs-material 
+      - run: pip install \
+              mkdocs-material \
+              mkdocs-awesome-pages-plugin \
+              mkdocs-table-reader-plugin \
       - run: mkdocs gh-deploy --force
