--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -56,6 +56,7 @@ theme:
     - navigation.path
     - search.suggest
     - search.highlight
+    - search.share
     - content.tabs.link
     - content.code.annotate
     - content.code.copy
@@ -103,6 +104,7 @@ markdown_extensions:
 plugins:
   - search
   - table-reader
+  - optimize
 
 extra_javascript:
   - javascripts/mathjax.js
