--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -48,6 +48,7 @@ nav:
     - Introduction: slicer/InterfaceIntro.md
     - Data Exploration:
       - CTChest: slicer/CTChestExplore.md
+      - CT PET (Multi-modal Dataset): slicer/CTPETExplore.md
 
 theme: 
   name: material
