Update MRTumors seg doc

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -51,6 +51,7 @@ nav:
       - CTChest: slicer/CTChestExplore.md
       - PET CT (Multi-modal Dataset): slicer/CTPETExplore.md
       - CT MRI: slicer/CTMRExplore.md
+      - Import DICOM datasets: slicer/ImportDICOMDataset.md
     - Volume Segmentation:
       - CTACardio: slicer/CTACardioSegment.md
       - MR Tumors: slicer/MRTumorSegment.md
