--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -56,6 +56,8 @@ nav:
       - CTACardio: slicer/CTACardioSegment.md
       - MR Tumors: slicer/MRTumorSegment.md
       - CT Femur: slicer/CTFemurSegment_9553F.md
+    - Surface Models:
+      - Creating Surface Models: slicer/CreateModels.md
 
 theme: 
   name: material
