--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -56,6 +56,7 @@ nav:
       - CTACardio: slicer/CTACardioSegment.md
       - MR Tumors: slicer/MRTumorSegment.md
       - CT Femur: slicer/CTFemurSegment_9553F.md
+      - Total Segmentator: slicer/TotalSegmentator.md
     - Surface Models:
       - Creating Surface Models: slicer/CreateModels.md
       - Exporting Models: slicer/ExportModels.md
