Update Hyperlinks and Cell doc. Remove embedded TOC from Navigation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -97,7 +97,7 @@ theme:
     - navigation.instant
     - navigation.top
     - navigation.path
-    - toc.integrate
+    #- toc.integrate
     - search.suggest
     - search.highlight
     - search.share
