--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -90,6 +90,7 @@ theme:
   name: material
   icon: 
     logo: material/skull-scan
+  #favicon: material/skull-scan
   features:
     - navigation.tabs
     - navigation.tabs.sticky
