Add Digital Photography Page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "workbench.colorCustomizations": {},
     "cSpell.words": [
-        "interquartile"
+        "interquartile",
+        "photosite"
     ]
 }
