update digital microscopy, rename color models

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,8 +52,10 @@ nav:
     - Imaging Concepts:
       - Light: imaging/electromagneticRadiation.md
       - Human Vision: imaging/humanVision.md
+      - Color Models: imaging/colorModels.md
     - Imaging with Light:
       - Digital Photography: imaging/digitalPhotography.md
+      - Digital Microscopy: imaging/digitalMicroscopy.md
     - 2D Medical Imaging:
       - Introduction: imaging/medicalImagingIntro.md
       - X-ray Imaging: imaging/XrayImaging.md
