Update CTMR, add MRHead

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -90,6 +90,7 @@ nav:
       - CTChest: slicer/CTChestExplore.md
       - PET CT (Multi-modal Dataset): slicer/CTPETExplore.md
       - CT MRI: slicer/CTMRExplore.md
+      - MRHead: slicer/MRHeadExplore.md
       - Import DICOM datasets: slicer/ImportDICOMDataset.md
     - Volume Segmentation:
       - CTACardio: slicer/CTACardioSegment.md
